update readme and installation scripts

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"start": "concurrently \"npm run start:client\" \"npm run start:server\"",
 		"start:client": "cd client && npx next dev",
-		"start:server": "cd server && node server.js"
+		"start:server": "cd server && node server.js",
+		"install:all": "cd client && npm install && cd ../server && npm install"
 	}
 }
